# comco

./: CMakeLists.txt
comco-opt/: CMakeLists.txt  comco-opt.cpp
compiler/: CMakeLists.txt  compiler.cpp
include/: CMakeLists.txt
include/Comco/: CMakeLists.txt  ComcoDialect.h  ComcoDialect.td  ComcoOps.h  ComcoOps.td  Passes.h
lib/Comco/: CMakeLists.txt  ComcoAllReduceLowering.cpp  ComcoAllReduceOutlining.cpp  ComcoBufferLowering.cpp  ComcoDialect.cpp  ComcoFuncLowering.cpp  ComcoFusion.cpp  ComcoLauncher.cpp  ComcoMatmulLowering.cpp  ComcoOps.cpp
scripts/: build.sh  count.sh  fusion.sh  integration.sh  test.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Comco/: allred_nokernel.mlir  allreduce-matmul.mlir  empty.mlir  func-matmul.mlir  func.mlir  linear.mlir  lower_math.mlir  matmul-allreduce.mlir  print.mlir  simple-allreduce.mlir  simple-matmul.mlir  smoke.mlir
